--- a/mipagina.html
+++ b/mipagina.html
@@ -6,6 +6,10 @@
 	<title></title>
 </head>
 <body>
-<h1><b><center>hola</center></b></h1>
+<h1><font><b><center>hoja de vida </center></b></font></h1>
+<center>
+	<font color="blue"><img src="yop.jpg"></font></center>
+<font color="blue"><hr></hr></font>
+<h2><font color="blue"><center>Roger Adan tuch tzoy</center></font></h2>
 </body>
 </html>
